# capture-card-screenshot

./: Cargo.toml  README.md
patches/: nokhwa-bindings-windows+0.4.2.patch
src/: main.rs
